# piccolo-sql-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/piccolo_sql_guard/: __init__.py  __main__.py  cli.py  config.py  engine.py  exit_codes.py  filesystem.py  models.py
src/piccolo_sql_guard/analysis/: ast_parser.py  call_graph.py  call_resolver.py  constant_store.py  function_summary.py  module_resolver.py  piccolo_imports.py  project_index.py  provenance.py  sql_classification.py  symbol_table.py  type_annotations.py  visitors.py
src/piccolo_sql_guard/reporting/: json.py  text.py
src/piccolo_sql_guard/rules/: base.py  pqs001.py  pqs002.py  pqs003.py  pqs004.py  registry.py
tests/fixtures/non_piccolo/: django_like_raw.py  type_checking_only_import.py  unrelated_querystring.py
tests/fixtures/safe/: allowlisted_builder.py  bool_param_builder.py  chained_safe_builders.py  enum_param_builder.py  ilike_placeholder.py  literal_raw.py  nested_function_builder.py  placeholder_binding.py  safe_token_builder.py
tests/fixtures/unsafe/: chained_unsafe_builder.py  concat_raw.py  dot_format_raw.py  fstring_raw.py  percent_format_raw.py  (+8 more)
tests/integration/: test_cli.py  test_cli_profile.py  test_pqs004.py  test_scan_fixtures.py
tests/unit/: test_call_graph.py  test_config.py  test_constant_store.py  test_engine.py  test_function_summary.py  test_module_resolver.py  test_nested_scope_isolation.py  test_piccolo_imports.py  test_piccolo_scope_edge_cases.py  test_project_index.py  test_provenance.py  test_registry.py  test_reporting_json.py  test_reporting_text.py  test_sql_classification.py  test_type_annotations.py
(+1 files in other folders)
