[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piccolo-sql-guard"
version = "0.1.0"
description = "Static checker for unsafe Piccolo raw SQL construction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "atkei"},
]
requires-python = ">=3.11,<3.15"
dependencies = []
keywords = ["piccolo", "sql", "security", "static-analysis", "linting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
piccolo-sql-guard = "piccolo_sql_guard.cli:main"

[project.urls]
Homepage = "https://github.com/atkei/piccolo-sql-guard"
Repository = "https://github.com/atkei/piccolo-sql-guard"
Issues = "https://github.com/atkei/piccolo-sql-guard/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/piccolo_sql_guard"]

[tool.ruff]
src = ["src"]
target-version = "py311"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
